--- a/a.css
+++ b/a.css
@@ -112,4 +112,11 @@ input:focus {
     background:transparent;
     width:160;
     height:600px;
+footer {
+position: absolute;
+left: 0;
+bottom: 0;
+height: 90px;
+width: 728%;
+}
    
